# pinn_huxley

./: .gitignore
data/: input-5.csv  input.csv  inputt1-5.csv  inputt1.csv  original-isom.csv  original-shortening.csv  original.csv  stress-shortening.csv  test.csv
models/: best_model-best.hdf5  checkpoint  isom-best_model-best.hdf5  model.hdf5  model.pb  tmpmodel-100187.ckpt.data-00000-of-00001  tmpmodel-100187.ckpt.index  tmpmodel-100605.ckpt.data-00000-of-00001  tmpmodel-100605.ckpt.index  tmpmodel-100629.ckpt.data-00000-of-00001  tmpmodel-100629.ckpt.index  tmpmodel-60044.ckpt.data-00000-of-00001  tmpmodel-60044.ckpt.index  tmpmodel-61114.ckpt.data-00000-of-00001  tmpmodel-61114.ckpt.index  tmpmodel-62897.ckpt.data-00000-of-00001  tmpmodel-62897.ckpt.index  tmpmodel-75351.ckpt.data-00000-of-00001  tmpmodel-75351.ckpt.index  tmpmodel-76043.ckpt.data-00000-of-00001  tmpmodel-76043.ckpt.index
results/: prediction.csv  test.csv
src/: BayesMOPINNHux.py  BayesOptPINNHux.py  Log.0  New_dxe_huxley-isom.py  convert_ckpt_to_pb.py  convert_h5_to_pb.py  draw.py  dxe_huxley-isom.py  huxpinn.py  huxpinnDXE.py  huxpinnISOM.py  mlp_hux.py  pinn.0  postprocess.py  preprocess.py  print_predictions.py  test_pb_file.py  test_pinn.py  train-huxpinn.py  train.0
src/isom/: convert_h5_to_pbISOM.py  huxpinnISOM.py  test_pb_fileISOM.py
src/isom_v2/: convert_h5_to_pbISOM.py  huxpinnISOM.py  test_pb_fileISOM.py  train-pinn.0
src/pinn-c-isom/: CMakeLists.txt
src/pinn-c-isom/src/: huxpinn_interface.cpp
src/pinn-c/src/: huxpinn_interface.cpp  huxpinn_interface.hpp
